--- a/01UTC_INST-DEV/css/custom1.css
+++ b/01UTC_INST-DEV/css/custom1.css
@@ -113,18 +113,15 @@ prm-logo-after a:hover{
   background-color: transparent;
 }
 /* search bar elipses on smaller screens */
-#searchBar::placeholder {
-    text-overflow:ellipsis;
-}
-#searchBar:-ms-input-placeholder {
+#searchBar:placeholder-shown{
+  margin-right:100px;
   text-overflow:ellipsis;
 }
-#searchBar::-moz-placeholder {
-  text-overflow:ellipsis;
-}
+/* removed to fix truncation of text in search box on mobile
 #searchBar{
   margin-right: 100px;
 }
+*/
 /* fix logo on header overlapping menu */
 @media (max-width: 959px) and (min-width: 600px), (max-width: 450px){
   prm-logo .logo-image, prm-logo img {
